2004-05-21  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib.h. glib2.def: Fixed a problem with rbg_cstr2rval_with_free
	reported by Joao Pedrosa.

2004-05-16  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobject.c (rbgobj_define_property_accessor): Supports 
	interface properties (Since 2.4).
	* src/rbgobj_type.c (rbgobj_init_interface): ditto. 

2004-05-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib.[ch]: Add CSTR2RVAL2 which free given char* area. 

2004-05-05  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbglib_spawn.c: Fixed a memory overflow bug in the
	  spawn_error table.
 
2004-05-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_spawn.c: Fix an initial error on some platforms 
	to restrict errno to exist the environment. 
	Reported by Laurent Sansonetti.
	
2004-04-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/utils.rb: Add a sample.
	* src/rbglib_utils.c: Add/Modify some methods.
	* src/lib/glib2.rb: Fix a bug which GLib.__add_one_arg_setter(klass) 
	doen't work for module function and moved from src/rbgutil.c.

2004-04-30  Pascal Terjan <pterjan@linuxfr.org>

	* src/rbglib_utils.c: Added.
	* src/rbglib.c: Follow rbglib_utils.c added.

2004-04-27  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_type.c: Accept a ruby class when GType[...] is required.
	* sample/type-register2.rb: Added.
	* src/rbglib_spawn.c: Improve error classes.
	Separate module from GLib to GLib::Spawn.
	Add GLib::Spawn.close_pid.

2004-04-27  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* src/rbglib_spawn.c: Added.
	* src/rbglib.c: Follow above changes.

2004-04-20  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_messages.c: Fix bugs, Add GLib::Log.log, set_fatal_mask, 
	set_always_fatal, some constants.
	* src/lib/glib2.rb: Add GLib::Log.error, message, critical, warning.

2004-04-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_convert.c: Add GLib.utf8_validate.
	* src/rbglib.c: Commented out Init_mem(), because of "cross-thread violation"
	with Gst::Thread.
