@@ -1,3 +1,9 @@
+2004-07-24  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* src/rbglib.c: Version informations use variables not macros. 
+	Added GLib::INTERFACE_AGE, GLib::BINARY_AGE.
+	Pointed out by Jeremy Henty
+
 2004-05-21  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* src/rbglib.h. glib2.def: Fixed a problem with rbg_cstr2rval_with_free
